--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -163,7 +163,7 @@
             <div class="service-left card">
                 <h5 class="card-header">SERVICE</h5>
                 <div class="card-body">
-                    <h1 class="card-text">
+                    <h1 class="card-title">
                         CRM insights: Selecting the Right One for Your Organization
                     </h1>
                 </div>
@@ -196,7 +196,7 @@
                     <img src="./img/product__item1.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
                         <h3>
-                            <a class="card-text" href="#">
+                            <a class="card-title" href="#">
                                 How To Deliver a Successful Product Launch
                             </a>
                         </h3>
@@ -209,7 +209,7 @@
                     <img src="./img/product__item2.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
                         <h3>
-                            <a class="card-text" href="#">
+                            <a class="card-title" href="#">
                                 The best cities for sales careers in 2022
                             </a>
                         </h3>
@@ -222,7 +222,7 @@
                     <img src="./img/product__item3.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
                         <h3>
-                            <a class="card-text" href="#">
+                            <a class="card-title" href="#">
                                 How to use 360 feedback to improve sales performance
                             </a>
                         </h3>
@@ -235,7 +235,7 @@
                     <img src="./img/product__item4.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
                         <h3>
-                            <a class="card-text" href="#">
+                            <a class="card-title" href="#">
                                 The Challenger Sale model: How to lead the conversation
                             </a>
                         </h3>
@@ -248,7 +248,7 @@
                     <img src="./img/product__item5.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw,  (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
                         <h3>
-                            <a class="card-text" href="#">
+                            <a class="card-title" href="#">
                                 3 ways To automate your lead generation process with Yoora
                             </a>
                         </h3>
@@ -261,7 +261,7 @@
                     <img src="./img/product__item6.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 100vw,  (min-width: 44em) 20vw, 100vw ">
                     <div class="card-body">
                         <h3>
-                            <a class="card-text" href="#">
+                            <a class="card-title" href="#">
                                 Marketplace Monthly Apps Spotlight: Aug 2022
                             </a>
                         </h3>
@@ -290,7 +290,7 @@
                         <h5 class="card-header">Marketing</h5>
                         <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw" >
                         <div class="card-body">
-                            <h3 class="card-text">
+                            <h3 class="card-title">
                                 Email marketing best practices: 10 experts share their email tips
                             </h3>
                         </div>
@@ -305,7 +305,7 @@
                     <div class="card">
                         <div class="card-horizontal">
                             <div class="card-body">
-                                <h3 class="card-text">
+                                <h3 class="card-title">
                                     Access Yoora’s leads features on your mobile
                                 </h3>
                             </div>
@@ -319,7 +319,7 @@
                     <div class="card">
                         <div class="card-horizontal">
                             <div class="card-body">
-                                <h3 class="card-text">
+                                <h3 class="card-title">
                                     Sales presentations: templates, examples and ideas on how to present like a pro
                                 </h3>
                             </div>
@@ -334,7 +334,7 @@
                     <div class="card">
                         <div class="card-horizontal">
                             <div class="card-body">
-                                <h3 class="card-text">
+                                <h3 class="card-title">
                                     How To Deliver a Successful Product Launch
                                 </h3>
                             </div>
@@ -370,7 +370,7 @@
                         sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                     <div class="card-body">
                         <h3>
-                            <a class="card-text" href="#">
+                            <a class="card-title" href="#">
                                 Sales Funnels: Definition, Process, Stages and Examples
                             </a>
                         </h3>
@@ -383,7 +383,7 @@
                         sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                     <div class="card-body">
                         <h3>
-                            <a class="card-text" href="#">
+                            <a class="card-title" href="#">
                                 What is a sales Yoora and how do you build one?
                             </a>
                         </h3>
@@ -396,7 +396,7 @@
                         sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                     <div class="card-body">
                         <h3>
-                            <a class="card-text" href="#">
+                            <a class="card-title" href="#">
                                 10 real estate cold calling scripts to increase lead generation
                             </a>
                         </h3>
