--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -418,24 +418,27 @@
     --------------------->
     <section class="cta">
         <div class="container">
-            <div class="cta__content">
-                <div class="cta__passage">
-                    <p class="cta__title text--white font--large">Ready to supercharge your business?</p>
-                    <p class="cta__text text--white font--medium">
+            <div class="cta-content card">
+                <div class="card-body ">
+                    <h3 class="card-title ">
+                        <a class="card-title text-white heading-lg" href="#">
+                            Ready to supercharge your business?
+                        </a>
+                    </h3>
+                    <div class="card-text text-white-50 heading-md">
                         Ask about Yoora products, pricing, implementation, or anything else.
-                        <br> Our highly trained reps are standing by, ready to help.
-                    </p>
+                        Our highly trained reps are standing by, ready to help.
+                    </div>
                 </div>
-                <div class="cta__button">
-                    <button class="btn btn--chevron"> Try For Free
+                <div class="card-footer">
+                    <button class="btn btn--chevron">
+                        Try For Free
                         <img class="btn__icon" src="./img/button__icon.png"
                             alt="This is the chevron-right icon of the button">
                     </button>
-                    <p class="cta__text text--white font--small">Full access. No credit card required.</p>
+                    <span class="heading-sm text-white">Full access. No credit card required.</span>
                 </div>
             </div>
-
-        </div>
     </section>
     <!-------------------
     CTA end
