--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- index CSS -->
     <link rel="stylesheet" href="./styles/index.css" />
 </head>
@@ -61,90 +62,45 @@
                 </p>
             </div>
             <div class="header-tab nav-menu ">
-                <ul
-                  class="nav-tabs nav-list nav nav-pills mb-3"
-                  role="tablist"
-                >
-                  <li class="nav-item item nav-text nav-mark " role="presentation">
-                    <button
-                    class="nav-link active"
-                    data-bs-toggle="pill"
-                    data-bs-target="#pills-contact"
-                    type="button"
-                    role="tab"
-                    aria-controls="pills-contact"
-                    aria-selected="false"
-                    >All Articles
-                    </button>
-                    <img class=shape src="./img/header__Shape.png" alt="icon shape">
-                  </li>
-                  <li class="nav-item item nav-text" role="presentation">
-                    <button
-                      class="nav-link"
-                      data-bs-toggle="pill"
-                      data-bs-target="#pills-contact"
-                      type="button"
-                      role="tab"
-                      aria-controls="pills-contact"
-                      aria-selected="false"
-                    >
-                    Sales
-                    </button>
-                  </li>
-                  <li class="nav-item item nav-text" role="presentation">
-                    <button
-                      class="nav-link"
-                      data-bs-toggle="pill"
-                      data-bs-target="#pills-contact"
-                      type="button"
-                      role="tab"
-                      aria-controls="pills-contact"
-                      aria-selected="false"
-                    >
-                    Marketing
-                    </button>
-                  </li>
-                  <li class="nav-item item nav-text" role="presentation">
-                    <button
-                      class="nav-link"
-                      data-bs-toggle="pill"
-                      data-bs-target="#pills-contact"
-                      type="button"
-                      role="tab"
-                      aria-controls="pills-contact"
-                      aria-selected="false"
-                    >
-                    Service
-                    </button>
-                  </li>
-                  <li class="nav-item item nav-text" role="presentation">
-                    <button
-                      class="nav-link"
-                      data-bs-toggle="pill"
-                      data-bs-target="#pills-contact"
-                      type="button"
-                      role="tab"
-                      aria-controls="pills-contact"
-                      aria-selected="false"
-                    >
-                    Product
-                    </button>
-                  </li>
-                  <li class="nav-item item nav-text" role="presentation">
-                    <button
-                      class="nav-link"
-                      data-bs-toggle="pill"
-                      data-bs-target="#pills-contact"
-                      type="button"
-                      role="tab"
-                      aria-controls="pills-contact"
-                      aria-selected="false"
-                    >
-                    New
-                    </button>
-                  </li>
+                <ul class="nav-tabs nav-list nav nav-pills mb-3" role="tablist">
+                    <li class="nav-item item nav-text nav-mark " role="presentation">
+                        <button class="nav-link active" data-bs-toggle="pill" data-bs-target="#pills-contact"
+                            type="button" role="tab" aria-controls="pills-contact" aria-selected="false">All Articles
+                        </button>
+                        <img class=shape src="./img/header__Shape.png" alt="icon shape">
+                    </li>
+                    <li class="nav-item item nav-text" role="presentation">
+                        <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button"
+                            role="tab" aria-controls="pills-contact" aria-selected="false">
+                            Sales
+                        </button>
+                    </li>
+                    <li class="nav-item item nav-text" role="presentation">
+                        <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button"
+                            role="tab" aria-controls="pills-contact" aria-selected="false">
+                            Marketing
+                        </button>
+                    </li>
+                    <li class="nav-item item nav-text" role="presentation">
+                        <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button"
+                            role="tab" aria-controls="pills-contact" aria-selected="false">
+                            Service
+                        </button>
+                    </li>
+                    <li class="nav-item item nav-text" role="presentation">
+                        <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button"
+                            role="tab" aria-controls="pills-contact" aria-selected="false">
+                            Product
+                        </button>
+                    </li>
+                    <li class="nav-item item nav-text" role="presentation">
+                        <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button"
+                            role="tab" aria-controls="pills-contact" aria-selected="false">
+                            New
+                        </button>
+                    </li>
                 </ul>
-              </div>
+            </div>
         </div>
     </header>
     <!-------------------
@@ -192,8 +148,15 @@
         <div class="container">
             <div class="product-content">
                 <div class="card card-img">
-                    <h5 class="card-header">News</h5>
-                    <img src="./img/product__item1.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
+                    <h5 class="card-header">New</h5>
+                    <picture>
+                        <!-- mobile -->
+                        <source media="(max-width:768px)" srcset="./img/product_img1-0.5x.jpg ">
+                        <!-- desktop -->
+                        <source media="(min-width:768px)" srcset="./img/product_img1-1.5x.jpg ">
+                        <img src="./img/product_img1-1.5x.jpg" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                    </picture>
                     <div class="card-body">
                         <h3>
                             <a class="card-text" href="#">
@@ -206,7 +169,14 @@
 
                 <div class="card card-img">
                     <h5 class="card-header">Sales</h5>
-                    <img src="./img/product__item2.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
+                    <picture>
+                        <!-- mobile -->
+                        <source media="(max-width:768px)" srcset="./img/product_img2-0.5.jpg">
+                        <!-- desktop -->
+                        <source media="(min-width:768px)" srcset="./img/product_img2-1.5.jpg ">
+                        <img src="./img/product_img2-1.5.jpg" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                    </picture>
                     <div class="card-body">
                         <h3>
                             <a class="card-text" href="#">
@@ -219,7 +189,8 @@
 
                 <div class="card card-img">
                     <h5 class="card-header">Sales</h5>
-                    <img src="./img/product__item3.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
+                    <img src="./img/product__item3.png" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
                         <h3>
                             <a class="card-text" href="#">
@@ -232,7 +203,8 @@
 
                 <div class="card card-img">
                     <h5 class="card-header">Sales</h5>
-                    <img src="./img/product__item4.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
+                    <img src="./img/product__item4.png" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
                         <h3>
                             <a class="card-text" href="#">
@@ -245,7 +217,8 @@
 
                 <div class="card card-img">
                     <h5 class="card-header">Product</h5>
-                    <img src="./img/product__item5.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 33vw,  (min-width: 44em) 50vw, 100vw ">
+                    <img src="./img/product__item5.png" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 33vw,  (min-width: 44em) 50vw, 100vw ">
                     <div class="card-body">
                         <h3>
                             <a class="card-text" href="#">
@@ -258,7 +231,8 @@
 
                 <div class="card card-img">
                     <h5 class="card-header">Product</h5>
-                    <img src="./img/product__item6.png" alt="Here is a photo of the product title above" class="card-img-top" sizes="(min-width: 66em) 100vw,  (min-width: 44em) 20vw, 100vw ">
+                    <img src="./img/product__item6.png" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 100vw,  (min-width: 44em) 20vw, 100vw ">
                     <div class="card-body">
                         <h3>
                             <a class="card-text" href="#">
@@ -270,8 +244,8 @@
                 </div>
 
             </div>
-            </div>
-            </section>
+        </div>
+    </section>
     <!-------------------
      Product end
     --------------------->
@@ -448,20 +422,24 @@
                 <a href="#" class="logo">
                     <img src="./img/logo.png" alt="logo">
                 </a>
-                    <p class="font--small">
-                        We built an elegant solution.<br>
-                        Our team created a fully integrated sales<br>
-                        and marketing solution for SMBs</p>
+                <p class="font--small">
+                    We built an elegant solution.<br>
+                    Our team created a fully integrated sales<br>
+                    and marketing solution for SMBs</p>
                 <ul class="media menu__list">
-                        <li>
-                            <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png" alt="Here is a logo of the media above" class="media-icon"></a>
-                        </li>
-                        <li>
-                            <a class="item" href="https://www.facebook.com/"> <img src="./img/Facebook.png" alt="Here is a logo of the media above" class="media-icon"></a>
-                        </li>
-                        <li>
-                            <a class="item" href="https://www.linkedin.com/"> <img src="./img/Linkedin.png" alt="Here is a logo of the media above" class="media-icon"></a>                        </li>
-                    </ul>
+                    <li>
+                        <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png"
+                                alt="Here is a logo of the media above" class="media-icon"></a>
+                    </li>
+                    <li>
+                        <a class="item" href="https://www.facebook.com/"> <img src="./img/Facebook.png"
+                                alt="Here is a logo of the media above" class="media-icon"></a>
+                    </li>
+                    <li>
+                        <a class="item" href="https://www.linkedin.com/"> <img src="./img/Linkedin.png"
+                                alt="Here is a logo of the media above" class="media-icon"></a>
+                    </li>
+                </ul>
 
             </div>
             <div class="footer__content-right">
@@ -522,11 +500,10 @@
                     <li><a class="item" href="#">Cookies</a></li>
                 </ul>
                 <div class="rule__locale">
-                        <img src="./img/Shape.png" alt=" this is the icon for the change language button"
-                            class="btn__icon">
-                        <select class="btn--flex" name="language" id="language">
-                            <option value="volvo">English</option>
-                            <option value="saab">Vietnamese</option>
+                    <img src="./img/Shape.png" alt=" this is the icon for the change language button" class="btn__icon">
+                    <select class="btn--flex" name="language" id="language">
+                        <option value="volvo">English</option>
+                        <option value="saab">Vietnamese</option>
                     </select>
                 </div>
             </div>
@@ -543,9 +520,13 @@
     <!-- Script -->
 
     <!-- jquery/thu vien ho tro -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
+        integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
